<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:id="@+id/rev_termsandcon"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/termstitle"
        android:fontFamily="@font/ralewaybold"
        />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_above="@+id/checkagree"
        android:layout_below="@+id/txt_termstitle"
        >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
        <TextView
            android:id="@+id/TEXT_STATUS_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/termsbody1"
            android:fontFamily="@font/ralewayregular"
            />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:textColor="@color/colorAccent"
                  android:layout_marginTop="10dp"
                  android:gravity="right"
                  android:text="@string/termstitle2"
                  android:fontFamily="@font/ralewaybold"
                  />

              <TextView

                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textStyle="bold"
                  android:textColor="@color/white"
                  android:layout_marginTop="10dp"
                  android:gravity="right"
                  android:text="@string/termsbody2"
                  android:fontFamily="@font/ralewayregular"
                  />

          </LinearLayout>
    </ScrollView>


</LinearLayout>


</android.support.constraint.ConstraintLayout>
</layout>