<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handlers"
            type="com.razytech.razynet.gui.changepassword.ChangePasswordFragment.MyClickHandlers"/>



    </data>

<android.support.design.widget.CoordinatorLayout
android:id="@+id/coorchange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.changepassword.ChangePasswordFragment"
    android:background="@color/lightBlack"
    android:layoutDirection="ltr"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">



            <ImageView
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@mipmap/logo_inside"
                android:visibility="gone"
                />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="140dp"
                android:layout_marginVertical="10dp"
                android:src="@mipmap/lock"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changepassword"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="17sp"
                android:fontFamily="@font/ralewaymedium"
                />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <EditText
            android:id="@+id/oldpassword_ET"
            style="@style/CreateAccEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/oldpassword_hint"
            android:fontFamily="@font/ralewaymedium"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <EditText
            android:id="@+id/newpassword_ET"
            style="@style/CreateAccEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/newpassword_hint"

            />
    </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">
                <EditText
                    android:id="@+id/confpassword_ET"
                    style="@style/CreateAccEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:hint="@string/create_acc_confpassword_hint"

                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/enter_code_btn"
                android:layout_width="@dimen/width_btn"
                android:layout_height="@dimen/height_btn"
                android:layout_gravity="center"
                android:background="@drawable/btn_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/ralewaybold"
                android:onClick="@{handlers.btn_submit}"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
</layout>